# HandLocator

./: .gitignore  CMakeLists.txt  PROJECT_STATE.md  ROBOTIC_HAND_PLAN.md  capture_hands.py  capture_hands_v2.py  download_models.sh  prepare_models.py  setup_cuda.sh  setup_onnxruntime.sh
models/: hand_landmark_lite.onnx
src/: hand_detector.cpp  hand_detector.hpp  hand_landmark.cpp  hand_landmark.hpp  main.cpp  palm_detector.cpp  palm_detector.hpp  types.hpp  viewer3d.cpp  viewer3d.hpp
